--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         href="https://fonts.googleapis.com/css2?family=Lalezar&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <script src="./javaScript.js"></script>
-    <!-- <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 
     <!-- Pido perdon pero realmente intente utilizar bootstrap, capaz más adelante vuelva a intentar cambiar
     las cosas, pero por el momento ya que no estuve teniendo mucho tiempo -->
