--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 
     <!-- Pido perdon pero realmente intente utilizar bootstrap, capaz más adelante vuelva a intentar cambiar
-    las cosas, pero por el momento ya que no estuve teniendo mucho tiempo -->
+    las cosas, pero por el momento no cambie mucho ya que no estuve teniendo mucho tiempo -->
 
 <body>
     <header>
         <img src="./img/logotipoF1.jpg" alt="logo" class="logo">
-        <div class="botones">
-            <button type="button" class="btn">Iniciar sesión</button>
-            <button type="button" class="btn">Registrarse</button>
-        </div>
+        <div class="d-flex gap-2 p-2">
+            <button type="button" class="btn btn-light border-0 py-2 px-4 rounded-pill">Iniciar sesión</button>
+            <button type="button" class="btn btn-outline-light py-2 px-4 rounded-pill">Registrarse</button>
     </header>
 
     <main>
@@ -50,7 +49,7 @@
         <!-- seccion de los circulos -->
 
         <section class="tituloEquipo">
-            <h3>Equipos</h3>
+            <h3>Calendario</h3>
         </section>
 
         <section class="carrusel-container">
@@ -192,7 +191,7 @@
         </div>
     </footer>
 
-    <!-- <script src="bootstrap/js/bootstrap.min.js"></script> -->
+    <script src="bootstrap/js/bootstrap.min.js"></script>
 
 </body>
 </head>
